@@ -35,6 +35,8 @@
  * ***** END LICENSE BLOCK ***** */
 
 #include "defs_private.h"
+#include "mozilla-config.h"
+
 #include "string.h"
 
 #include "OffscreenGecko/string.h"
